# Embedded-Systems-Project

./: Installing_libsoc  README.md  colaborators.txt  hello-world  hello-world.c  set_up_toradex.txt
BBB Pinage/: README.md
Code/: Makefile  exec  main.c  motor.c  motor.h  motor.js  motor_enable.js
Code/motorFunction/: .cproject  .project
Code/motorFunction/Debug/: makefile  motorFunction  sources.mk
Code/motorFunction/Debug/src/: motorFunction.d  subdir.mk
Code/motorFunction/Debug/src/BlackLib/: BlackCore.d  subdir.mk
Code/motorFunction/Debug/src/BlackLib/BlackADC/: BlackADC.d  subdir.mk
Code/motorFunction/Debug/src/BlackLib/BlackDirectory/: BlackDirectory.d  subdir.mk
Code/motorFunction/Debug/src/BlackLib/BlackGPIO/: BlackGPIO.d  subdir.mk
Code/motorFunction/Debug/src/BlackLib/BlackI2C/: BlackI2C.d  subdir.mk
Code/motorFunction/Debug/src/BlackLib/BlackMutex/: BlackMutex.d  subdir.mk
Code/motorFunction/Debug/src/BlackLib/BlackPWM/: BlackPWM.d  subdir.mk
Code/motorFunction/Debug/src/BlackLib/BlackSPI/: BlackSPI.d  subdir.mk
Code/motorFunction/Debug/src/BlackLib/BlackThread/: BlackThread.d  subdir.mk
Code/motorFunction/Debug/src/BlackLib/BlackTime/: BlackTime.d  subdir.mk
Code/motorFunction/Debug/src/BlackLib/BlackUART/: BlackUART.d  subdir.mk
Code/motorFunction/src/: motorFunction.cpp
Code_JS/: Makefile  OBS.txt  main.c  motor.h  motor.js  sensor.c  sensor.js
Final Code/: final  free.c  free.h  libs.h  main.c  motor.c  motor.h  sonar.c  sonar.h
Final Code/config/: config.sh  help.txt  uEnv.txt
Libsoc/: gpio  motor.h  project  project_test.c  pwm  pwm_test.c
Libsoc/sonar/: sonar  sonar.c  sonar2  thread_test2.c  time_test  time_test.c  toggle_time.c  trigger_test  trigger_test.c
PWM API/: .gitignore  .travis.yml  CMakeLists.txt  libbbbpwm.pc.in
PWM API/Compilation/: test
PWM API/include/: CMakeLists.txt
PWM API/test/: test_file_io.c  test_pwm_control.c
PWM API/util/: bbb_pwm_example.c  list_bbb_pwms.c
Sensors Datasheet/: prices.txt
Setup/: 3. Boot BBB w_ SD card.docx  installing_libsoc.txt  set_up_BBB.txt
Tests with libsoc/: gpblink  gpio  gpio_blink.c  gpio_test.c  libsoc.so.2.4.2  project  project_test.c  pwm_test.c
Tests with libsoc/sonar/: echo_test  echo_test.c  sonar.c  sonar2.c  thread_test  thread_test.c  thread_test2  toggle_time
USB/: usb.c
YEAHBOY/: final  free.h  libs.h  main.c  motor.c  motor.h  setup.c  setup.h  sonar.c  sonar.h  usb.c
c-bbb-pwm/: Doxyfile  LICENSE  README.md
c-bbb-pwm/Compilation/: bbb_pwm.c  bbb_pwm_example.c  bbb_pwm_internal.h
c-bbb-pwm/cmake/: FindUDev.cmake
c-bbb-pwm/include/: bbb_pwm.h  bbb_pwm_internal.h
c-bbb-pwm/src/: CMakeLists.txt  bbb_pwm.c
c-bbb-pwm/test/: CMakeLists.txt  test_macros.h  test_pwm_list.c
c-bbb-pwm/util/: CMakeLists.txt  bbb_pwm.c  bbb_pwm.h  bbb_pwm_example.c  hello  hello.c  test
