file(GLOB TEST_SOURCE_FILES "*.c")

foreach(CURRENT_TEST_SOURCE_FILE ${TEST_SOURCE_FILES})
	get_filename_component(CURRENT_TEST_BINARY ${CURRENT_TEST_SOURCE_FILE} NAME_WE)
	string(REPLACE "test_" "" CURRENT_TEST ${CURRENT_TEST_BINARY})
	
	add_executable(${CURRENT_TEST_BINARY} ${CURRENT_TEST_SOURCE_FILE})
	target_include_directories(${CURRENT_TEST_BINARY} PUBLIC ${LIBBBBPWM_INCLUDEDIR})
	target_link_libraries(${CURRENT_TEST_BINARY} ${LIBBBBPWM_LIBRARY})
	add_test(${CURRENT_TEST} ${CURRENT_TEST_BINARY})
endforeach()
